--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
 </div>
 <div class="abas-texto">
     <div class="aba-conteudo ativo">
-<h3 class="aba-conteudo-titulo-principal"> META 1 </h3>
+<h3 class="aba-conteudo-titulo-principal"> Me Formar </h3>
 <h4 class="aba-conteudo-titulo-secundario"> TEMPO PARA COMPLETAR O OBJETIVO</h4>
     </div>
  <div class="aba-conteudo ativo">
-<h3 class="aba-conteudo-titulo-principal"> META 2 </h3>
+<h3 class="aba-conteudo-titulo-principal"> encontrar um bom emprego</h3>
 <h4 class="aba-conteudo-titulo-secundario"> TEMPO PARA COMPLETAR O OBJETIVO</h4>
     </div>
  <div class="aba-conteudo ativo">
-<h3 class="aba-conteudo-titulo-principal"> META 3 </h3>
+<h3 class="aba-conteudo-titulo-principal"> trabalhar para conseguir dinheiro </h3>
 <h4 class="aba-conteudo-titulo-secundario"> TEMPO PARA COMPLETAR O OBJETIVO</h4>
     </div>
  <div class="aba-conteudo ativo">
-<h3 class="aba-conteudo-titulo-principal"> META 4 </h3>
+<h3 class="aba-conteudo-titulo-principal"> comprar um chevette 98 1.6 turbo para fazer um projeto junto com o amigo  </h3>
 <h4 class="aba-conteudo-titulo-secundario"> TEMPO PARA COMPLETAR O OBJETIVO</h4>
     </div>
 </div>
